--- a/galery.html
+++ b/galery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BarberAti - Gallery</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <style>
         .pics {
             position: relative;
@@ -27,8 +27,7 @@
             height: 100%;
             transform-origin: center;
             transform-style: preserve-3d;
-            /* 4 images: 360/4 = 90deg, adjust for more images */
-            /* If you have 8 images, use 45deg, etc. */
+
         }
         .pics span:nth-child(1) { transform: rotateY(0deg) translateZ(240px); }
         .pics span:nth-child(2) { transform: rotateY(72deg) translateZ(240px); }
@@ -58,18 +57,18 @@
             <a href="https://tiktok.com" target="_blank"><img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg" alt="TikTok" /></a>
         </div>
         <nav class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="team.html">Team</a>
-            <a href="about.html">About</a>
+            <a href="./index.html">Home</a>
+            <a href="./team.html">Team</a>
+            <a href="./about.html">About</a>
             <a href="#" class="active">Gallery</a>
         </nav>
     </header>
     <div class="pics">
-        <span><img src="/pics/reference/Battya.png" alt=""></span>
-        <span><img src="/pics/reference/Hajni.png" alt=""></span>
-        <span><img src="/pics/reference/Kati.png" alt=""></span>
-        <span><img src="/pics/reference/sanyi.png" alt=""></span>
-        <span><img src="/pics/reference/Zsuzsi.png" alt=""></span>
+        <span><img src="./pics/reference/Battya.png" alt=""></span>
+        <span><img src="./pics/reference/Hajni.png" alt=""></span>
+        <span><img src="./pics/reference/Kati.png" alt=""></span>
+        <span><img src="./pics/reference/sanyi.png" alt=""></span>
+        <span><img src="./pics/reference/Zsuzsi.png" alt=""></span>
     </div>
 </body>
 </html>
