--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BarberAti - About</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -26,10 +26,10 @@
                     src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg" alt="TikTok" /></a>
         </div>
         <nav class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="team.html">Team</a>
+            <a href="./index.html">Home</a>
+            <a href="./team.html">Team</a>
             <a href="#">About</a>
-            <a href="galery.html">Gallery</a>
+            <a href="./galery.html">Gallery</a>
         </nav>
     </header>
 
