--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>BarberAti</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <div id="appointment-modal"
@@ -49,9 +49,9 @@
 
         <nav class="nav-links">
             <a href="#">Home</a>
-            <a href="team.html">Team</a>
-            <a href="/about.html">About</a>
-            <a href="/galery.html">Gallery</a>
+            <a href="./team.html">Team</a>
+            <a href="./about.html">About</a>
+            <a href="./galery.html">Gallery</a>
         </nav>
     </header>
 
@@ -73,11 +73,11 @@
         </div>
 
         <div class="hero-right">
-            <img src="/pics/haircut.png" alt="Barber cutting hair" />
+            <img src="./pics/haircut.png" alt="Barber cutting hair" />
         </div>
 
     </main>
 </body>
-<script src="booking.js"></script>
+<script src="./booking.js"></script>
 
 </html>
