--- a/team.html
+++ b/team.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BarberAti - Team</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
@@ -26,10 +26,10 @@
                     src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg" alt="TikTok" /></a>
         </div>
         <nav class="nav-links">
-            <a href="index.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="#">Team</a>
-            <a href="about.html">About</a>
-            <a href="/galery.html">Gallery</a>
+            <a href="./about.html">About</a>
+            <a href="./galery.html">Gallery</a>
         </nav>
     </header>
 
@@ -38,7 +38,7 @@
     <!-- Boss row -->
     <div class="team-cards" style="justify-content: center;">
         <div class="team-card">
-            <img src="/pics/Boss.JPG" alt="Ati" class="team-photo" />
+            <img src="./pics/Boss.JPG" alt="Ati" class="team-photo" />
             <div class="team-info">
                 <h2>Ati</h2>
                 <p>Age: 35</p>
@@ -49,7 +49,7 @@
     <!-- Workers row -->
     <div class="team-cards" style="justify-content: center; gap: 60px;">
         <div class="team-card">
-            <img src="/pics/reference/Battya.png" alt="Tom" class="team-photo" />
+            <img src="./pics/reference/Battya.png" alt="Tom" class="team-photo" />
             <div class="team-info">
                 <h2>Tom</h2>
                 <p>Age: 28</p>
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="team-card">
-            <img src="/pics/reference/Hajni.png" alt="Anna" class="team-photo" />
+            <img src="./pics/reference/Hajni.png" alt="Anna" class="team-photo" />
             <div class="team-info">
                 <h2>Anna</h2>
                 <p>Age: 30</p>
@@ -65,7 +65,7 @@
             </div>
         </div>
         <div class="team-card">
-            <img src="/pics/reference/sanyi.png" alt="Mark" class="team-photo" />
+            <img src="./pics/reference/sanyi.png" alt="Mark" class="team-photo" />
             <div class="team-info">
                 <h2>Mark</h2>
                 <p>Age: 26</p>
