--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BarberAti</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" />
     <link rel="stylesheet" href="./style.css" />
@@ -16,13 +17,15 @@
             style="position:absolute; top:10px; right:16px; background:none; border:none; color:#fff; font-size:22px; cursor:pointer;">&times;</button>
         <h2>Book Your Appointment</h2>
         <label for="fullname" style="display: block; margin: 18px 0 8px;">Full Name:</label>
-        <input type="text" id="fullname" style="padding: 6px 12px; border-radius: 6px; border: none; font-size: 16px; width: 90%;" placeholder="Enter your full name">
+        <input type="text" id="fullname"
+            style="padding: 6px 12px; border-radius: 6px; border: none; font-size: 16px; width: 90%;"
+            placeholder="Enter your full name">
         <label for="date" style="display:block; margin:18px 0 8px;">Choose a weekday:</label>
         <input type="date" id="date" min="" style="padding:6px 12px; border-radius:6px; border:none; font-size:16px;">
         <label for="hour" style="display:block; margin:18px 0 8px;">Choose hour:</label>
         <select id="hour" style="padding:6px 12px; border-radius:6px; border:none; font-size:16px;">
         </select>
-        
+
         <button onclick="submitAppointment()"
             style="margin-top:24px; padding:10px 28px; border-radius:8px; background:#e63946; color:#fff; border:none; font-size:18px; cursor:pointer;">Book</button>
         <div id="appointment-success" style="margin-top:18px; color:#7fff7f; display:none;">Appointment booked!</div>
