Looks ok on mobile

--- a/about.html
+++ b/about.html
@@ -14,6 +14,23 @@
         <div class="logo">
             <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f488.svg" alt="Barber Shop Logo" />
         </div>
+
+        <div class="offScreenMenu">
+            <ul>
+                <li><a href="./index.html" style="color: #333; text-decoration: none;">Home</a></li>
+                <li><a href="./team.html" style="color: #333; text-decoration: none;">Team</a></li>
+                <li><a href="./galery.html" style="color: #333; text-decoration: none;">Gallery</a></li>
+            </ul>
+        </div>
+
+        <nav>
+            <div class="ham-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+
         <div class="social-icons">
             <a href="https://facebook.com" target="_blank"><img
                     src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" /></a>
@@ -25,6 +42,7 @@
             <a href="https://tiktok.com" target="_blank"><img
                     src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/tiktok.svg" alt="TikTok" /></a>
         </div>
+
         <nav class="nav-links">
             <a href="./index.html">Home</a>
             <a href="./team.html">Team</a>
@@ -33,10 +51,10 @@
         </nav>
     </header>
 
-    <main style="display: flex; align-items: center; justify-content: center; min-height: 60vh;">
+    <main style="display: flex; align-items: center; justify-content: center; padding-top: 50px;">
         <div style="text-align: center;">
-            <h1>BarberAti – More Than a Haircut</h1>
-            <p style="max-width: 800px; margin: 20px auto; color: #ccc; line-height: 2;">
+            <h1 class="about1">BarberAti – More Than a Haircut</h1>
+            <p class="about" style="max-width: 800px; color: #ccc; line-height: 2;">
                 At BarberAti, a haircut isn’t just a service—it’s an experience and a statement of style.
                 Our mission is for every guest to leave our shop renewed, confident, and truly satisfied.
 
@@ -55,5 +73,6 @@
         </div>
     </main>
 </body>
+<script src="./booking.js"></script>
 
 </html>
