--- a/team.html
+++ b/team.html
@@ -14,6 +14,23 @@
         <div class="logo">
             <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f488.svg" alt="Barber Shop Logo" />
         </div>
+
+        <div class="offScreenMenu">
+            <ul>
+                <li><a href="./index.html" style="color: #333; text-decoration: none;">Home</a></li>
+                <li><a href="./about.html" style="color: #333; text-decoration: none;">About</a></li>
+                <li><a href="./galery.html" style="color: #333; text-decoration: none;">Gallery</a></li>
+            </ul>
+        </div>
+
+        <nav>
+            <div class="ham-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+
         <div class="social-icons">
             <a href="https://facebook.com" target="_blank"><img
                     src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" /></a>
@@ -34,46 +51,47 @@
     </header>
 
     <main class="hero-section" style="flex-direction: column;">
-    <h1 style="text-align:center; margin-bottom: 40px;">Meet Our Team</h1>
-    <!-- Boss row -->
-    <div class="team-cards" style="justify-content: center;">
-        <div class="team-card">
-            <img src="./pics/Boss.JPG" alt="Ati" class="team-photo" />
-            <div class="team-info">
-                <h2>Ati</h2>
-                <p>Age: 35</p>
-                <p>Profession: Owner & Master Barber</p>
+        <h1 style="text-align:center; margin-bottom: 20px;">Meet Our Team</h1>
+        <!-- Boss row -->
+        <div class="team-cards" style="justify-content: center;">
+            <div class="team-card">
+                <img src="./pics/Boss.JPG" alt="Ati" class="team-photo" />
+                <div class="team-info">
+                    <h2>Ati</h2>
+                    <p>Age: 35</p>
+                    <p>Profession: Owner & Master Barber</p>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- Workers row -->
-    <div class="team-cards" style="justify-content: center; gap: 60px;">
-        <div class="team-card">
-            <img src="./pics/reference/Battya.png" alt="Tom" class="team-photo" />
-            <div class="team-info">
-                <h2>Tom</h2>
-                <p>Age: 28</p>
-                <p>Profession: Fade Specialist</p>
+        <!-- Workers row -->
+        <div class="team-cards" style="justify-content: center; gap: 60px;">
+            <div class="team-card">
+                <img src="./pics/reference/Battya.png" alt="Tom" class="team-photo" />
+                <div class="team-info">
+                    <h2>Tom</h2>
+                    <p>Age: 28</p>
+                    <p>Profession: Fade Specialist</p>
+                </div>
+            </div>
+            <div class="team-card">
+                <img src="./pics/reference/Hajni.png" alt="Anna" class="team-photo" />
+                <div class="team-info">
+                    <h2>Anna</h2>
+                    <p>Age: 30</p>
+                    <p>Profession: Beard & Grooming Expert</p>
+                </div>
+            </div>
+            <div class="team-card">
+                <img src="./pics/reference/sanyi.png" alt="Mark" class="team-photo" />
+                <div class="team-info">
+                    <h2>Mark</h2>
+                    <p>Age: 26</p>
+                    <p>Profession: Modern Cuts & Trends</p>
+                </div>
             </div>
         </div>
-        <div class="team-card">
-            <img src="./pics/reference/Hajni.png" alt="Anna" class="team-photo" />
-            <div class="team-info">
-                <h2>Anna</h2>
-                <p>Age: 30</p>
-                <p>Profession: Beard & Grooming Expert</p>
-            </div>
-        </div>
-        <div class="team-card">
-            <img src="./pics/reference/sanyi.png" alt="Mark" class="team-photo" />
-            <div class="team-info">
-                <h2>Mark</h2>
-                <p>Age: 26</p>
-                <p>Profession: Modern Cuts & Trends</p>
-            </div>
-        </div>
-    </div>
-</main>
+    </main>
 </body>
+<script src="./booking.js"></script>
 
 </html>
