--- a/index.html
+++ b/index.html
@@ -9,34 +9,29 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 
-<div id="appointment-modal"
-    style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.7); align-items:center; justify-content:center; z-index:999;">
-    <div
-        style="background:#222; padding:32px 24px; border-radius:16px; min-width:320px; text-align:center; position:relative;">
-        <button onclick="closeModal()"
-            style="position:absolute; top:10px; right:16px; background:none; border:none; color:#fff; font-size:22px; cursor:pointer;">&times;</button>
-        <h2>Book Your Appointment</h2>
-        <label for="fullname" style="display: block; margin: 18px 0 8px;">Full Name:</label>
-        <input type="text" id="fullname"
-            style="padding: 6px 12px; border-radius: 6px; border: none; font-size: 16px; width: 90%;"
-            placeholder="Enter your full name">
-        <label for="date" style="display:block; margin:18px 0 8px;">Choose a weekday:</label>
-        <input type="date" id="date" min="" style="padding:6px 12px; border-radius:6px; border:none; font-size:16px;">
-        <label for="hour" style="display:block; margin:18px 0 8px;">Choose hour:</label>
-        <select id="hour" style="padding:6px 12px; border-radius:6px; border:none; font-size:16px;">
-        </select>
 
-        <button onclick="submitAppointment()"
-            style="margin-top:24px; padding:10px 28px; border-radius:8px; background:#e63946; color:#fff; border:none; font-size:18px; cursor:pointer;">Book</button>
-        <div id="appointment-success" style="margin-top:18px; color:#7fff7f; display:none;">Appointment booked!</div>
-    </div>
-</div>
 
 <body>
     <header>
         <div class="logo">
             <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@14.0.2/assets/svg/1f488.svg" alt="Barber Shop Logo" />
         </div>
+
+        <div class="offScreenMenu">
+            <ul>
+                <li><a href="./team.html" style="color: #333; text-decoration: none;">Team</a></li>
+                <li><a href="./about.html" style="color: #333; text-decoration: none;">About</a></li>
+                <li><a href="./galery.html" style="color: #333; text-decoration: none;">Gallery</a></li>
+            </ul>
+        </div>
+
+        <nav>
+            <div class="ham-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
 
         <div class="social-icons">
             <a href="https://facebook.com" target="_blank"><img
@@ -65,6 +60,31 @@
             <div class="book-box">
                 <span>Book your appointment now</span>
                 <button class="book-btn">Book Now</button>
+            </div>
+
+            <div id="appointment-modal"
+                style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.7); align-items:center; justify-content:center; z-index:999;">
+                <div
+                    style="background:#222; padding:32px 24px; border-radius:16px; min-width:320px; text-align:center; position:relative;">
+                    <button onclick="closeModal()"
+                        style="position:absolute; top:10px; right:16px; background:none; border:none; color:#fff; font-size:22px; cursor:pointer;">&times;</button>
+                    <h2>Book Your Appointment</h2>
+                    <label for="fullname" style="display: block; margin: 18px 0 8px;">Full Name:</label>
+                    <input type="text" id="fullname"
+                        style="padding: 6px 12px; border-radius: 6px; border: none; font-size: 16px; width: 90%;"
+                        placeholder="Enter your full name">
+                    <label for="date" style="display:block; margin:18px 0 8px;">Choose a weekday:</label>
+                    <input type="date" id="date" min=""
+                        style="padding:6px 12px; border-radius:6px; border:none; font-size:16px;">
+                    <label for="hour" style="display:block; margin:18px 0 8px;">Choose hour:</label>
+                    <select id="hour" style="padding:6px 12px; border-radius:6px; border:none; font-size:16px;">
+                    </select>
+
+                    <button onclick="submitAppointment()"
+                        style="margin-top:24px; padding:10px 28px; border-radius:8px; background:#e63946; color:#fff; border:none; font-size:18px; cursor:pointer;">Book</button>
+                    <div id="appointment-success" style="margin-top:18px; color:#7fff7f; display:none;">Appointment
+                        booked!</div>
+                </div>
             </div>
 
             <div class="contact-phone" style="display: flex; align-items: center; gap: 10px; margin-top: 18px;">
